Video deletion and experimental video update
